disable race deleting, disable deleting attributes

--- a/public/views/race_manager.html
+++ b/public/views/race_manager.html
@@ -21,9 +21,9 @@
                 <a href="/views/race.html?id={{race.id}}" class="btn btn-link" role="button">{{ race.name }}</a>
             </td>
             <td style="vertical-align:middle;">{{ race.max_age }}</td>
-            <td>
-                <a class="btn btn-link" ng-click="deleteRace(race.id)">х</a>
-            </td>
+            <!--<td>-->
+                <!--<a class="btn btn-link" ng-click="deleteRace(race.id)">х</a>-->
+            <!--</td>-->
         </tr>
     </table>
 </div>
