--- a/public/views/index.html
+++ b/public/views/index.html
@@ -9,17 +9,27 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 
+    <style>
+        div.overlay {
+            opacity: 0.4;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: black;
+            width: 100%;
+            height: 5000px;
+            z-index: 5000;
+        }
+    </style>
+
 </head>
 
 <body ng-app="personageManagerApp">
 <div data-ng-include data-src="'views/main-menu.html'"></div>
+<div class="overlay" id="loader" ng-show="loader"></div>
 
 <div ng-controller="personageListController">
-    <div style="font-size: x-large" ng-show="loader">
-        LOADING...
-    </div>
-
-    <table class="table table-striped" ng-hide="loader">
+    <table class="table table-striped">
         <tr ng-repeat="personage in personages | orderBy : 'id'">
             <td style="vertical-align:middle; text-align: center;">
                 <a href="/views/view_personage.html?id={{personage.id}}" class="btn btn-link" role="button">
