--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -5,29 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-
-    <style>
-        div.overlay {
-            opacity: 0.4;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background-color: white;
-            width: 100%;
-            height: 5000px;
-            z-index: 5000;
-        }
-    </style>
 </head>
 <body ng-app="personageApp">
 
 <div ng-controller="personageController">
-    <div class="overlay" id="loader" ng-show="loader">
-        <img style="margin-left: 48%; margin-top: 200px;" src="/images/loader.gif" alt="Smiley face" align="middle">
-    </div>
+    <div data-ng-include data-src="'loader.html'"></div>
 
     <div data-ng-include data-src="'main-menu.html'"></div>
     <h3 class="text-center">{{personage.name}}</h3>
