--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -8,3 +8,11 @@ div.overlay {
     height: 5000px;
     z-index: 5000;
 }
+
+input[type="checkbox"] {
+    width:20px;
+}
+
+input[type="radio"] {
+    width:20px;
+}
