--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,29 +4,17 @@
     <title>Персонажи</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/stylesheets/main.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 
-    <style>
-        div.overlay {
-            opacity: 0.4;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background-color: black;
-            width: 100%;
-            height: 5000px;
-            z-index: 5000;
-        }
-    </style>
-
 </head>
 
 <body ng-app="personageManagerApp">
 <div data-ng-include data-src="'views/main-menu.html'"></div>
-<div class="overlay" id="loader" ng-show="loader"></div>
+<div data-ng-include data-src="'loader.html'"></div>
 
 <div ng-controller="personageListController">
     <table class="table table-striped">
